css/style.css
/* ... */
.preloader.opacity-0{
    opacity: 0;
}
.preloader .loader{
    height: 40px;
    width: 40px;
    border: 4px solid #e3e3e3;
    border-radius: 50%;
    border-top: 4px solid transparent;
    border-bottom: 4px solid transparent;
    -webkit-animation: spin 3s linear infinite;
    animation: spin 3s linear infinite;
}
@-webkit-keyframes spin{
    0%{
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100%{
        -webkit-transform: rotate(360deg);
        transform: rotate(360deg);
    }
}
}
@keyframes spin{
    0%{
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100%{
        -webkit-transform: rotate(360deg);
        transform: rotate(360deg);
    }
}
.aside{
    width: 270px;
    background-color: #fdf9ff;
    position: fixed;
    height: 100%;
    left:0 ;
    top: 0;
    z-index: 10;
    border-right:1px solid #e8dfec;
    padding: 30px;
    -webkit-transition: all 0.9s ease;
    transition: all 0.9s ease;
}
.aside .nav-toggler{
    height: 40px;
    width: 45px;
    border: 1px solid #d4d4e3;
    cursor: pointer;
    position: fixed;
    left: 300px;
    top: 10px;
    z-index: 11;
    border-radius: 5px;
    background-color: #fdf9ff;
    display: none;
    -ms-flex-align: center;
    align-items: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-transition: all 0.9s ease;
    transition: all 0.9s ease;
}
.aside .nav-toggler span{
    height: 2px;
    width: 18px;
    display: inline-block;
    position: relative;
}
.aside .nav-toggler.open span{
    background-color: transparent;
}
.aside .nav-toggler span::before{
    content: '';
    height: 2px;
    width: 18px;
    position: absolute;
    top: -6px;
    left: 0;
}
.aside .nav-toggler.open span::before{
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg);
    top: 0px;
}
.aside .nav-toggler span::after{
    content: '';
    height: 2px;
    width: 18px;
    position: absolute;
    top: 6px;
    left: 0;
}
.aside .nav-toggler.open span::after{
    -webkit-transform: rotate(-45deg);
    transform: rotate(-45deg);
    top: 0px;
}
.aside  .nav{
    list-style: none;
    margin: 80px 0;
    padding: 0;
}

.aside .nav li{
    display: block;
}
.aside .nav li a{
    font-size: 16px;
    font-weight: 600;
    color: #302e4a;
    text-decoration: none;
    line-height: 45px;
    display: block;
    border-bottom: 1px solid #e8dfec;
    -webkit-transition: all 0.3s ease;
    transition: all 0.3s ease;
    text-transform: capitalize;
}
.aside .nav li a:not(.active):hover{
    padding-left: 5px;
}
.aside .nav li a .fa{
    margin-left: 5px;
}
.home{
    min-height: 100vh;
    display: -ms-flexbox;
    display: flex;
}
.home .intro{
    text-align: center;
}
.home .intro img{
    height: 200px;
    width: 200px;
    border-radius: 50%;
    display: inline-block;
    border: 8px solid #ffffff;
}
.home .intro h1{
    font-size: 30px;
    color: #302e4d;
    font-family: 'Rubik', sans-serif;
    font-weight: 700;
    margin: 20px 0 5px;
}
.home .intro p{
    font-size: 16px;
    font-weight: 500;
    margin: 0;
    line-height: 22px;
    color: #504e70;
}
.home .intro .social-link{
    margin-top: 20px;
}
.home .intro .social-link a{
    height: 35px;
    width: 35px;
    display: inline-block;
    text-align: center;
    line-height: 35px;
    color: #ffffff;
    margin: 0 4px;
    border-radius: 50%;
    text-decoration: none;
    -webkit-transition: all 0.3s ease;
    transition: all 0.3s ease;
}
.home .intro .social-link a:hover{
    -webkit-transform: scale(1.1);
    transform: scale(1.1);
}
.about-content{
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    max-width: 100%;
}
.about-text{
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    max-width: 100%;
    font-family: 'Playfair Display', serif;
}
.about-text h3{
    font-size: 24px;
    margin-bottom: 15px;
    font-weight: 700;
    color: #302e4d;
    font-family: 'Playfair Display', serif;
}
.about-text p{
    font-size: 16px;
    line-height: 25px;
    color: #504e70;
    margin: 0;
    font-family: 'Playfair Display', serif;
}
.personal-info{
    -ms-flex: 0 0 60%;
    flex: 0 0 60%;
    max-width: 60%;
    margin-top: 40px;
    font-family: 'Playfair Display', serif;
}
.personal-info .info-item p{
    font-weight: 600;
    padding: 10px 0;
    font-size: 16px;
    color: #302e4d;
    margin: 0;
    border-bottom: 1px solid #e8dfec;
    font-family: 'Playfair Display', serif;

}
.personal-info .info-item p span{
    font-weight: 400;
    color: #504e70;
    margin-left: 4px;
    display: inline-block;
}
.info-item{
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50%
}
.personal-info .buttons{
    margin-top: 30px;
}
.personal-info .buttons .btn{
    margin-left: 15px;
    margin-top: 10px;
}
.skills{
    /*background-color: blue;*/
    -ms-flex: 0 0 40%;
    flex: 0 0 40%;
    max-width: 40%;
    margin-top: 40px;  
}
.skills .skill-item{

    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    max-width: 80%;
    margin-bottom: 30px;
}
.skills .skill-item h5{
    line-height: 40px;
    font-weight: 600;
    font-size: 16px;
    color: #302e4d;
    text-transform: capitalize;
    margin: 0;
}
.skills .skill-item .progress{
    background-color: #e3e3e3;
    height: 7px;
    border-radius: 4px;
    width: 100%;
    position: relative;
}
.skills .skill-item .progress .progress-in{
    position: absolute;
    left: 0;
    right: 0;
    height: 100%;
    border-radius: 4px;
}
.skills .skill-item .skill-percent{
   line-height: 40px;
   position: absolute;
   color: #302e4d;
   right: 0;
   top: -40px;
   font-weight: 400;
}
.about-content .education{
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50;
    margin-top: 30px;
}
.about-content .experience{
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50;
    margin-top: 30px;
}
.about-content h3 .title{
    font-size: 24px;
    font-weight: 700;
    color: #302e4d;
}
/* ... */

